# SoftwareDesign

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
info/: ClassDiagram_SDLab1_.drawio
lab1/: CMakeLists.txt
lab1/info/: ClassDiagram_SDLab1.drawio
lab1/src/: main.cpp
lab1/src/container/: BinaryTree.h  BinaryTreeIterator.h  TreeNode.h
lab1/src/exceptions/: EmptyErrorBT.h  InvalidIteratorBT.h
lab1/src/shapes/: Circle.h  Ellipse.cpp  Ellipse.h  Shape.cpp  Shape.h  TextInEllipse.cpp  TextInEllipse.h
lab2/: BTException.h  BinaryTree.h  Circle.cpp  Circle.h  Colour.h  Ellipse.cpp  Ellipse.h  KPO_2.pro  Point.h  Shape.cpp  Shape.h  Text.cpp  Text.h  TextInEllipse.cpp  TextInEllipse.h  TreeNode.h  figuresscene.cpp  figuresscene.h  figuresscene.ui  figuresscenemdi.cpp  figuresscenemdi.h  headers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  priorityQueueContainer.h  priorityQueueExceptions.h  righttriangle.cpp  righttriangle.h  righttriangleroundedcorners.cpp  righttriangleroundedcorners.h  shapeview.cpp  shapeview.h  triangletext.cpp  triangletext.h  ui_figuresscene.h  ui_mainwindow.h
src/: main.cpp
src/container/: BinaryTree.h  BinaryTreeIterator.h  TreeNode.h
src/exceptions/: BTException.h  EmpyErrorBT.h  InvalidIteratorBT.h
src/shapes/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Shape.cpp  Shape.h  Text.cpp  Text.h  TextInEllipse.cpp  TextInEllipse.h
